# SMDS

./: Cargo.toml  README.md
crates/multi_she_adapter/: Cargo.toml
crates/multi_she_adapter/src/: lib.rs  rust_backend.rs
crates/smds_bench/: Cargo.toml
crates/smds_bench/src/: lib.rs
crates/smds_cli/: Cargo.toml
crates/smds_cli/src/: main.rs
crates/smds_core/: Cargo.toml
crates/smds_core/src/: lib.rs
crates/smds_crypto_utils/: Cargo.toml
crates/smds_crypto_utils/src/: lib.rs
crates/smds_server/: Cargo.toml
crates/smds_server/src/: lib.rs
crates/smds_types/: Cargo.toml
crates/smds_types/src/: lib.rs
crates/smds_user/: Cargo.toml
crates/smds_user/src/: lib.rs
