[package]
name = "smds_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
multi_she_adapter = { path = "../multi_she_adapter" }
smds_core = { path = "../smds_core" }
smds_crypto_utils = { path = "../smds_crypto_utils" }
smds_types = { path = "../smds_types" }
