[package]
name = "smds_cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
backend-rust-multi-she = ["multi_she_adapter/backend-rust-multi-she"]

[dependencies]
multi_she_adapter = { path = "../multi_she_adapter" }
serde_json = "1"
smds_bench = { path = "../smds_bench" }
smds_core = { path = "../smds_core" }
smds_types = { path = "../smds_types" }

[[bin]]
name = "smds_cli"
path = "src/main.rs"
