[package]
name = "smds_core"
version = "0.1.0"
edition = "2021"

[dependencies]
smds_crypto_utils = { path = "../smds_crypto_utils" }
smds_types = { path = "../smds_types" }
multi_she_adapter = { path = "../multi_she_adapter" }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
